# Utilities

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/include/logging/: boost_trivial_logging.h
src/logging/: boost_trivial_logging.cpp
tests/: CMakeLists.txt
tests/unit_tests/: test_logging.cpp  test_logging.h
